force-app/main/default/objects/Case/fields/HasExtraCover__c.field-meta.xml
<CustomField>
    <fullName>HasExtraCover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies if the article/s related to the case have extra cover. This field will be used by Omni-Channel so that cases with extra cover are allocated the Extra Cover skill</description>
    <inlineHelpText>This field identifies if the article/s related to the case have extra cover. This field will be used by Omni-Channel so that cases with extra cover are allocated the Extra Cover skill</inlineHelpText>
    <label>Has Extra Cover</label>
    <type>Checkbox</type>
</CustomField>