force-app/main/default/objects/Case/fields/hidden_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>hidden_Record_Type_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>{hidden} Record Type Name</label>
    <type>Text</type>
</CustomField>