force-app/main/default/objects/Case/fields/Implementation_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Work_Type__c</fullName>
    <description>This field is to determine if a Sale implementation case is related to opportunity or not</description>
    <formula>IF(  ISBLANK(Opportunity__c ) , &apos;Non-Opportunity Work&apos;, &apos;Opportunity Work&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Work Type</label>
    <type>Text</type>
</CustomField>