force-app/main/default/objects/Case/fields/Initial_Call_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Initial_Call_Purpose__c</fullName>
    <description>StarTrack Initial Call Purpose</description>
    <label>Initial Call Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>