force-app/main/default/objects/Case/fields/Initial_Caller_Email__c.field-meta.xml
<CustomField>
    <fullName>Initial_Caller_Email__c</fullName>
    <description>StarTrack : Capture Caller Email information</description>
    <label>Initial Contact Email</label>
    <type>Email</type>
</CustomField>