force-app/main/default/objects/Case/fields/Initial_Caller_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Initial_Caller_First_Name__c</fullName>
    <description>StarTrack : Capture Initial Caller First Name information</description>
    <label>Initial Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>