force-app/main/default/objects/Case/fields/Initial_Caller_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Initial_Caller_Last_Name__c</fullName>
    <description>StarTrack : Capture Initial Caller Last Name Information</description>
    <label>Initial Contact Last Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>