force-app/main/default/objects/Case/fields/Initial_Caller_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Initial_Caller_Phone_Number__c</fullName>
    <description>StarTrack : Capture Initial Caller Phone Number Information</description>
    <label>Initial Contact Phone Number</label>
    <type>Phone</type>
</CustomField>