force-app/main/default/objects/Case/fields/Initial_Caller_Type__c.field-meta.xml
<CustomField>
    <fullName>Initial_Caller_Type__c</fullName>
    <description>StarTrack : Capture Initial Caller Type Information</description>
    <label>Initial Contact Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>