force-app/main/default/objects/Case/fields/Initial_Contact_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Mobile_Number__c</fullName>
    <description>StarTrack : Capture Initial Caller Mobile Number Information</description>
    <label>Initial Contact Mobile Number</label>
    <type>Phone</type>
</CustomField>