force-app/main/default/objects/Case/fields/Initical_CallPreferred_method_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Initical_CallPreferred_method_of_contact__c</fullName>
    <description>StarTrack : Capture Initial caller preferred method of contact information</description>
    <label>Initial Contact Pref Method of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>