force-app/main/default/objects/Case/fields/Internal_Milestones_Violated__c.field-meta.xml
<CustomField>
    <fullName>Internal_Milestones_Violated__c</fullName>
    <label>Internal Milestones Violated</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>