force-app/main/default/objects/Case/fields/Internal_Tier_Escalation_Email__c.field-meta.xml
<CustomField>
    <fullName>Internal_Tier_Escalation_Email__c</fullName>
    <label>Internal Tier Escalation Email</label>
    <type>Email</type>
</CustomField>