force-app/main/default/objects/Case/fields/Is_Published__c.field-meta.xml
<CustomField>
    <fullName>Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack Comment Is Published</description>
    <label>Public</label>
    <type>Checkbox</type>
</CustomField>