force-app/main/default/objects/Case/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <description>Shows New Case (for reporting purposes only)</description>
    <formula>IF(ISPICKVAL(Status,&quot;New&quot;),True,False)</formula>
    <label>New</label>
    <type>Checkbox</type>
</CustomField>