force-app/main/default/objects/Case/fields/IsNewForRouting__c.field-meta.xml
<CustomField>
    <fullName>IsNewForRouting__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field used by WFR to be set to False &quot;SSSW - Update IsNewForRouting&quot;.
Used by code to determine Routing assignment based of New/Updated.</description>
    <label>IsNewForRouting?</label>
    <type>Checkbox</type>
</CustomField>