force-app/main/default/objects/Case/fields/Last_Assigned_Queue__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_Queue__c</fullName>
    <description>Stores the name of the last assigned queue</description>
    <inlineHelpText>Stores the name of the last assigned queue</inlineHelpText>
    <label>Last Assigned Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>