force-app/main/default/objects/Case/fields/Last_Assigned_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_Queue_ID__c</fullName>
    <description>Stores the ID of the last assigned queue</description>
    <inlineHelpText>Stores the ID of the last assigned queue</inlineHelpText>
    <label>Last Assigned Queue ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>