force-app/main/default/objects/Case/fields/LastIncomingEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>LastIncomingEmailAddress__c</fullName>
    <description>SSSW - Stores the last incoming email address to the Case. Can be used to send emails to the incoming mailer.</description>
    <label>Last Incoming Email Address</label>
    <type>Email</type>
</CustomField>