force-app/main/default/objects/Case/fields/LastStatusUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastStatusUpdate__c</fullName>
    <description>Provides the last time the status is updated</description>
    <label>Last Status Update</label>
    <type>DateTime</type>
</CustomField>