force-app/main/default/objects/Case/fields/LDC_Manual_Check_Result__c.field-meta.xml
<CustomField>
    <fullName>LDC_Manual_Check_Result__c</fullName>
    <description>StarTrack - LDC Manual Check Result</description>
    <label>LDC Manual Check Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>