force-app/main/default/objects/Case/fields/LDC_System_Check__c.field-meta.xml
<CustomField>
    <fullName>LDC_System_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack - LDC System Check</description>
    <label>LDC System Check</label>
    <type>Checkbox</type>
</CustomField>