force-app/main/default/objects/Case/fields/Lodgement_Customer_Migration__c.field-meta.xml
<CustomField>
    <fullName>Lodgement_Customer_Migration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lodgement Customer Migration</label>
    <referenceTo>Lodgement_Customer_Migration__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>