force-app/main/default/objects/Case/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <description>StarTrack - Email of Case Owner&apos;s Manager</description>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>