force-app/main/default/objects/Case/fields/MaritzCX__Response_View_Link__c.field-meta.xml
<CustomField>
    <fullName>MaritzCX__Response_View_Link__c</fullName>
    <formula>IF( MaritzCX__Response_Deleted_From_MaritzCX__c , $Label.maritzcx__deleted_response_message_formula , 
IF(  NOT(ISNULL(MaritzCX__ALG_Response_Id__c))  ,
HYPERLINK(
&quot;/apex/&quot;+
 $Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c  + 
IF( ISBLANK($Setup.MaritzCX__AlPublic__c.MaritzCX__NamespacePrefix__c)  , &apos;&apos;,&apos;__&apos;) + 
&quot;ViewResponsePage?Id=&quot; + TEXT(MaritzCX__ALG_Response_Id__c),
&quot;View Response&quot;,
&quot;_blank&quot;
),&apos;&apos;))</formula>
    <label>View Response</label>
    <type>Text</type>
</CustomField>