force-app/main/default/objects/Case/fields/MLID__c.field-meta.xml
<CustomField>
    <fullName>MLID__c</fullName>
    <description>used by report request</description>
    <label>MLID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>