force-app/main/default/objects/Case/fields/MPB_BSP_Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>MPB_BSP_Enquiry_Type__c</fullName>
    <label>MPB BSP Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advice on sending parcels</fullName>
            </value>
            <value>
                <fullName>Tracking enquiry</fullName>
            </value>
            <value>
                <fullName>Technical enquiry</fullName>
            </value>
            <value>
                <fullName>Growing Global</fullName>
            </value>
            <value>
                <fullName>Other enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>