force-app/main/default/objects/Case/fields/MPB_BSP_Tech_Enquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>MPB_BSP_Tech_Enquiry_Type__c</fullName>
    <label>MPB BSP Tech Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sending parcels</fullName>
            </value>
            <value>
                <fullName>MyPost Business app</fullName>
            </value>
            <value>
                <fullName>Small Business offers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>