force-app/main/default/objects/Case/fields/Network_Facility__c.field-meta.xml
<CustomField>
    <fullName>Network_Facility__c</fullName>
    <description>Network Facility</description>
    <formula>TEXT(Network__r.Facility__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility</label>
    <type>Text</type>
</CustomField>