force-app/main/default/objects/Case/fields/Network_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Network_Fax_Number__c</fullName>
    <description>Depot Fax Number</description>
    <formula>Network__r.Fax_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Depot Fax Number</label>
    <type>Text</type>
</CustomField>