force-app/main/default/objects/Case/fields/Network_State__c.field-meta.xml
<CustomField>
    <fullName>Network_State__c</fullName>
    <description>Network State</description>
    <formula>TEXT(Network__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>