force-app/main/default/objects/Case/fields/No_Data_Change__c.field-meta.xml
<CustomField>
    <fullName>No_Data_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>StarTrack No Data values changed (triggers the process builder to record a task asynchronously using the No Data datetime field)</description>
    <label>No Data Change</label>
    <type>Checkbox</type>
</CustomField>