force-app/main/default/objects/Case/fields/Nominated_Advocate__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Advocate__c</fullName>
    <label>Nominated Advocate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>