force-app/main/default/objects/Case/fields/Nominated_Advocate_Email__c.field-meta.xml
<CustomField>
    <fullName>Nominated_Advocate_Email__c</fullName>
    <label>Nominated Advocate Email</label>
    <type>Email</type>
</CustomField>