force-app/main/default/objects/Case/fields/Notification_Required__c.field-meta.xml
<CustomField>
    <fullName>Notification_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will capture recent caller notification option.</description>
    <label>Notification Required?</label>
    <type>Checkbox</type>
</CustomField>