force-app/main/default/objects/Case/fields/Number_of_Callers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Callers__c</fullName>
    <defaultValue>0</defaultValue>
    <description>StarTrack Number of Callers iterative field to set using Publisher Action and trigger the Process Builder job which stores the Caller information as a Task record.</description>
    <label>Number of Callers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>