force-app/main/default/objects/Case/fields/Number_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Items__c</fullName>
    <description>StarTrack Number of Items field will be used to store the number of items in a particular case record.</description>
    <label>Number Of Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>