force-app/main/default/objects/Case/fields/OmniRoutingSecondaryPriority__c.field-meta.xml
<CustomField>
    <fullName>OmniRoutingSecondaryPriority__c</fullName>
    <description>This is being used by the Service Channel to assign the secondary priority on the PSR</description>
    <label>Omni Routing Secondary Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1850</fullName>
            </value>
            <value>
                <fullName>1851</fullName>
            </value>
            <value>
                <fullName>1852</fullName>
            </value>
            <value>
                <fullName>1853</fullName>
            </value>
            <value>
                <fullName>1854</fullName>
            </value>
            <value>
                <fullName>1855</fullName>
            </value>
            <value>
                <fullName>1856</fullName>
            </value>
            <value>
                <fullName>1857</fullName>
            </value>
            <value>
                <fullName>1858</fullName>
            </value>
            <value>
                <fullName>1859</fullName>
            </value>
            <value>
                <fullName>1860</fullName>
            </value>
            <value>
                <fullName>1861</fullName>
            </value>
            <value>
                <fullName>1862</fullName>
            </value>
            <value>
                <fullName>1863</fullName>
            </value>
            <value>
                <fullName>1864</fullName>
            </value>
            <value>
                <fullName>1865</fullName>
            </value>
            <value>
                <fullName>1866</fullName>
            </value>
            <value>
                <fullName>1867</fullName>
            </value>
            <value>
                <fullName>1868</fullName>
            </value>
            <value>
                <fullName>1869</fullName>
            </value>
            <value>
                <fullName>1870</fullName>
            </value>
            <value>
                <fullName>1871</fullName>
            </value>
            <value>
                <fullName>1872</fullName>
            </value>
            <value>
                <fullName>1873</fullName>
            </value>
            <value>
                <fullName>1874</fullName>
            </value>
            <value>
                <fullName>1875</fullName>
            </value>
            <value>
                <fullName>1876</fullName>
            </value>
            <value>
                <fullName>1877</fullName>
            </value>
            <value>
                <fullName>1878</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>