force-app/main/default/objects/Case/fields/Operational_Contact__c.field-meta.xml
<CustomField>
    <fullName>Operational_Contact__c</fullName>
    <description>Used by Supply Chain Optimisation Case</description>
    <label>Operational Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>