force-app/main/default/objects/Case/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <formula>IMAGE( 
CASE(Origin, 
&apos;Email&apos;, &apos;/resource/StarTrackCaseIcons/Email_Origin.png&apos;, 
&apos;Internal&apos;, &apos;/resource/StarTrackCaseIcons/Internal_Origin.png&apos;, 
&apos;System&apos;, &apos;/resource/StarTrackCaseIcons/System_Origin.png&apos;, 
&apos;Phone&apos;, &apos;/resource/StarTrackCaseIcons/Phone_Origin.png&apos;, 
&apos;Social&apos;, &apos;/resource/StarTrackCaseIcons/Social_Origin.png&apos;,
&apos;Chat&apos;, &apos;/resource/StarTrackCaseIcons/Chat_Origin.png&apos;,
&apos;Fax&apos;, &apos;/resource/StarTrackCaseIcons/Fax_Origin.png&apos;, 
&apos;Web&apos;, &apos;/resource/StarTrackCaseIcons/Web_Origin.png&apos;,
&apos;BSP&apos;, &apos;/resource/StarTrackCaseIcons/BSPCaseOrigin.png&apos;,
&apos;Snap It&apos;, &apos;/resource/StarTrackCaseIcons/snap_it.png&apos;,
&apos;/resource/StarTrackCaseIcons/Other_Origin.png&apos;),&apos;Other&apos; 
)</formula>
    <label>Channel</label>
    <type>Text</type>
</CustomField>