force-app/main/default/objects/Case/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>used for Sales Implementation case. Other Sellers who don&apos;t have Salesforce account. This field is also used in CAR requests to identify other work type values.</description>
    <label>Other</label>
    <length>55</length>
    <type>Text</type>
</CustomField>