force-app/main/default/objects/Case/fields/Other_Party__c.field-meta.xml
<CustomField>
    <fullName>Other_Party__c</fullName>
    <description>SSSW - Used for Decipha Load</description>
    <label>Other Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>