force-app/main/default/objects/Case/fields/Out_of_Charter__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Charter__c</fullName>
    <formula>If (ISblank(SLATargetDate__c),false,                     /*if the SLATargetdate is blank don’t set charter */         
(If(Isblank(ClosedDate),                                           /* check to see if closed date is set */ 
IF(SLATargetDate__c &gt; now(),false,true),            /*compare SLA date to now flag on if we have passed the SLA target date*/ 
If(ClosedDate&gt;SLATargetDate__c,true,false))))  /* or closed date is set compare to SLAtargetdate,set flag on if closed date&gt;the /*SLA*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out of Charter</label>
    <type>Checkbox</type>
</CustomField>