force-app/main/default/objects/Case/fields/Owner_is_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_Queue__c</fullName>
    <formula>ISBLANK(Owner:User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is Queue</label>
    <type>Checkbox</type>
</CustomField>