force-app/main/default/objects/Case/fields/Pickup_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Booking_Reference__c</fullName>
    <description>StarTrack - Pickup Booking Reference Number.</description>
    <label>Pickup Booking Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>