force-app/main/default/objects/Case/fields/PONUser__c.field-meta.xml
<CustomField>
    <fullName>PONUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field is for PON user assignment (REQ0591433)
Re-purposed for MyNetwork UI uplift project, to assign cases to self, on Case List page</description>
    <label>Case Assigned To</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only MyNetwork Users can be assigned.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>MyNetwork Portal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PONUser</relationshipName>
    <type>Lookup</type>
</CustomField>