force-app/main/default/objects/Case/fields/PreferredAgentExpiry__c.field-meta.xml
<CustomField>
    <fullName>PreferredAgentExpiry__c</fullName>
    <inlineHelpText>This date is used by Omni to determine whether to assign the case to the preferred agent or to other agents</inlineHelpText>
    <label>Preferred Agent Expiry</label>
    <type>DateTime</type>
</CustomField>