force-app/main/default/objects/Case/fields/PreventStatusChange__c.field-meta.xml
<CustomField>
    <fullName>PreventStatusChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this ticked, the status of the case will not automatically changed by the system. USED BY WFR on CaseComment &amp; EmailMessage</description>
    <label>Prevent Status Change</label>
    <type>Checkbox</type>
</CustomField>