force-app/main/default/objects/Case/fields/Primary_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Name__c</fullName>
    <description>SSSW</description>
    <label>Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>