force-app/main/default/objects/Case/fields/PrimaryAccount__c.field-meta.xml
<CustomField>
    <fullName>PrimaryAccount__c</fullName>
    <label>Primary Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>