force-app/main/default/objects/Case/fields/PrimaryContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactFirstName__c</fullName>
    <description>Used for Contact Us Form.</description>
    <label>Primary Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>