force-app/main/default/objects/Case/fields/PrimaryContactLastName__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactLastName__c</fullName>
    <description>Contact Us.</description>
    <label>Primary Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>