force-app/main/default/objects/Case/fields/PriorityNumber__c.field-meta.xml
<CustomField>
    <fullName>PriorityNumber__c</fullName>
    <description>SSSW - Defines the Case Priority based off workflow</description>
    <label>Priority Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>