force-app/main/default/objects/Case/fields/Problem_Related_to__c.field-meta.xml
<CustomField>
    <fullName>Problem_Related_to__c</fullName>
    <description>Problem Related to</description>
    <inlineHelpText>Problem Related to</inlineHelpText>
    <label>Problem Related to</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ProductSubCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access issues</fullName>
            </value>
            <value>
                <fullName>Account Issues</fullName>
            </value>
            <value>
                <fullName>Advice emails</fullName>
            </value>
            <value>
                <fullName>Advice only</fullName>
            </value>
            <value>
                <fullName>Armaguard Remittance</fullName>
            </value>
            <value>
                <fullName>Bcard order status</fullName>
            </value>
            <value>
                <fullName>Bpay and DE Traces</fullName>
            </value>
            <value>
                <fullName>Bulk Money Order</fullName>
            </value>
            <value>
                <fullName>Cash as cheque</fullName>
            </value>
            <value>
                <fullName>Cash Processed as Cheque</fullName>
            </value>
            <value>
                <fullName>CBA Voucher Request</fullName>
            </value>
            <value>
                <fullName>CBA Vouchers</fullName>
            </value>
            <value>
                <fullName>Change/Update Details</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Charges</fullName>
            </value>
            <value>
                <fullName>Cheque Extraction</fullName>
            </value>
            <value>
                <fullName>Cheque Fraud</fullName>
            </value>
            <value>
                <fullName>Cheque Processed as Cash</fullName>
            </value>
            <value>
                <fullName>Consignment Cancellation</fullName>
            </value>
            <value>
                <fullName>Contact Detail Updates</fullName>
            </value>
            <value>
                <fullName>Contact Updates</fullName>
            </value>
            <value>
                <fullName>Contract Issue</fullName>
            </value>
            <value>
                <fullName>Copy</fullName>
            </value>
            <value>
                <fullName>Copy (Accounts Payable)</fullName>
            </value>
            <value>
                <fullName>Copy (Payments Support)</fullName>
            </value>
            <value>
                <fullName>Copy of Money Order</fullName>
            </value>
            <value>
                <fullName>Copy of TRMF/TSMF Request</fullName>
            </value>
            <value>
                <fullName>Copy TRMF/TSMF Request</fullName>
            </value>
            <value>
                <fullName>Credit Issues</fullName>
            </value>
            <value>
                <fullName>Customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>