force-app/main/default/objects/Case/fields/Product_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Product_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by Sales Implementation Case</description>
    <label>Product Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>